facebook authentication working fine too

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -16,8 +16,8 @@ development:
   twitter_app_secret: OCCqCQwshbV0Mtr8J2k5koP6qUQVQRYqYYD2haVLQquA9g24cz
   google_app_id: 321166250838-raeovir3ar73jbgk52qe7bmtiun1blnt.apps.googleusercontent.com
   google_app_secret: mpLLKR3zQeaJQ0BUeRct36sk
-  facebook_app_id: #u3HhLquUQnRS1bo6TiTttv7Bf
-  facebook_app_secret: #OCCqCQwshbV0Mtr8J2k5koP6qUQVQRYqYYD2haVLQquA9g24cz
+  facebook_app_id: 1620111301590111
+  facebook_app_secret: 058569d00dd4a6249276328e9a2445d9
   twitter_access_token: 14919287-2KvCcZG5oYhBhk2cCXoJoP4H9kMQ5PcDnn20J8jSC
   twitter_access_token_secret: keiIpaEGUbcuuCbzQ44Kp41nisJBHyXhEBR7273o2lK7G
 
