--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: sqlite3
-  database: db/shrota_development.sqlite3
+  database: db/chnageme_development.sqlite3
   pool: 5
   timeout: 5000
 
@@ -14,12 +14,12 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: sqlite3
-  database: db/shrota_test.sqlite3
+  database: db/chnageme_test.sqlite3
   pool: 5
   timeout: 5000
 
 production:
   adapter: sqlite3
-  database: db/shrota_production.sqlite3
+  database: db/chnageme_production.sqlite3
   pool: 5
   timeout: 5000
